--- a/WOTS/Info.plist
+++ b/WOTS/Info.plist
@@ -4,6 +4,16 @@
 <dict>
 	<key>AWS</key>
 	<dict>
+        <key>UserFileManager</key>
+        <dict>
+            <key>Default</key>
+            <dict>
+                <key>S3Bucket</key>
+                <string>wordonthestreet-userfiles-mobilehub-915338963</string>
+                <key>Region</key>
+                <string>us-east-1</string>
+            </dict>
+        </dict>
 		<key>CredentialsProvider</key>
 		<dict>
 			<key>CognitoIdentity</key>
