--- a/WOTS/Info.plist
+++ b/WOTS/Info.plist
@@ -2,72 +2,74 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>AWS</key>
-    <dict>
-        <key>IdentityManager</key>
-        <dict>
-            <key>Default</key>
-            <dict/>
-        </dict>
-        <key>CognitoUserPool</key>
-        <dict>
-            <key>Default</key>
-            <dict>
-                <key>CognitoUserPoolId</key>
-                <string>us-east-1_LmNZkMGbU</string>
-                <key>CognitoUserPoolAppClientId</key>
-                <string>1g79s9sjkg149u9d157tk4hdb</string>
-                <key>Region</key>
-                <string>us-east-1</string>
-                <key>CognitoUserPoolAppClientSecret</key>
-                <string>1bu8a94qbfs5b6od3r24mcnn3hu95kca1e2e9pjjuni5h9u4hvcm</string>
-            </dict>
-        </dict>
-        <key>DynamoDBObjectMapper</key>
-        <dict>
-            <key>Default</key>
-            <dict>
-                <key>Region</key>
-                <string>us-east-1</string>
-            </dict>
-        </dict>
-        <key>CredentialsProvider</key>
-        <dict>
-            <key>CognitoIdentity</key>
-            <dict>
-                <key>Default</key>
-                <dict>
-                    <key>PoolId</key>
-                    <string>us-east-1:fb15d096-3f42-4c86-87c0-2db4339ca572</string>
-                    <key>Region</key>
-                    <string>us-east-1</string>
-                </dict>
-            </dict>
-        </dict>
-        <key>Cognito</key>
-        <dict>
-            <key>Default</key>
-            <dict>
-                <key>Region</key>
-                <string>us-east-1</string>
-            </dict>
-        </dict>
-        <key>MobileHub</key>
-        <dict>
-            <key>ProjectClientId</key>
-            <string>MobileHub 66a13ecb-e1ce-4759-8c62-768d031dfe93 aws-my-sample-app-ios-swift-v0.16</string>
-        </dict>
-        <key>UserFileManager</key>
-        <dict>
-            <key>Default</key>
-            <dict>
-                <key>S3Bucket</key>
-                <string>wordonthestreet-userfiles-mobilehub-915338963</string>
-                <key>Region</key>
-                <string>us-east-1</string>
-            </dict>
-        </dict>
-    </dict>
+	<key>AWS</key>
+	<dict>
+		<key>Cognito</key>
+		<dict>
+			<key>Default</key>
+			<dict>
+				<key>Region</key>
+				<string>us-east-1</string>
+			</dict>
+		</dict>
+		<key>CognitoUserPool</key>
+		<dict>
+			<key>Default</key>
+			<dict>
+				<key>CognitoUserPoolAppClientId</key>
+				<string>1g79s9sjkg149u9d157tk4hdb</string>
+				<key>CognitoUserPoolAppClientSecret</key>
+				<string>1bu8a94qbfs5b6od3r24mcnn3hu95kca1e2e9pjjuni5h9u4hvcm</string>
+				<key>CognitoUserPoolId</key>
+				<string>us-east-1_LmNZkMGbU</string>
+				<key>Region</key>
+				<string>us-east-1</string>
+			</dict>
+		</dict>
+		<key>CredentialsProvider</key>
+		<dict>
+			<key>CognitoIdentity</key>
+			<dict>
+				<key>Default</key>
+				<dict>
+					<key>PoolId</key>
+					<string>us-east-1:fb15d096-3f42-4c86-87c0-2db4339ca572</string>
+					<key>Region</key>
+					<string>us-east-1</string>
+				</dict>
+			</dict>
+		</dict>
+		<key>DynamoDBObjectMapper</key>
+		<dict>
+			<key>Default</key>
+			<dict>
+				<key>Region</key>
+				<string>us-east-1</string>
+			</dict>
+		</dict>
+		<key>IdentityManager</key>
+		<dict>
+			<key>Default</key>
+			<dict/>
+		</dict>
+		<key>MobileHub</key>
+		<dict>
+			<key>ProjectClientId</key>
+			<string>MobileHub 66a13ecb-e1ce-4759-8c62-768d031dfe93 aws-my-sample-app-ios-swift-v0.16</string>
+		</dict>
+		<key>UserFileManager</key>
+		<dict>
+			<key>Default</key>
+			<dict>
+				<key>Region</key>
+				<string>us-east-1</string>
+				<key>S3Bucket</key>
+				<string>wordonthestreet-userfiles-mobilehub-915338963</string>
+			</dict>
+		</dict>
+	</dict>
+    <key>UIRequiresFullScreen</key>
+    <true/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
